mobile/scss/modules/profile.scss
.button.button-small.button-icon:before {
  font-size: 26px !important;
}

$profile-subheader-height : $bar-midsize-height - $bar-height - 20px;

.profile-visual{
  position: absolute;
  left: 10px;
  right: 10px;
  top: $bar-height + 20px; // adding ios statusbar height offset
  height: $profile-subheader-height;
  text-align: center;
  z-index: 2;

  .photo{
    display: inline-block;
    vertical-align: top;
    width: $profile-subheader-height * 1.1;
    height: $profile-subheader-height * 1.1;
    background: #333 url('../img/bg-profile-default.jpg') 50% no-repeat;
    -webkit-background-size: 120px 120px;
    background-size: 120px 120px;
    border: 2px solid #8C8B8B;
    text-align: center;
    @include rounded-corner(100%);

    img{
      @include rounded-corner(100%);
      width: 100%;
      vertical-align: top;
    }
  }

  .contacts-amount{
    position: absolute;
    left: 0;
    bottom: 5px;
    padding-bottom: 15px;
    padding-top: 15px;
    padding-right: 15px;
    color: #fff;

    // &:after{
    //   content: 'Friends';
    //   position: absolute;
    //   bottom: 0;
    //   left: -2px;
    //   font-size: 11px;
    //   right: -6px;
    //   text-align: center;
    //   margin-top: -1px;
    // }

    .badge{
      position: absolute;
      left: -5px;
      top: 8px;
      font-size: 10px;
      min-width: 0;
      padding: 3px 5px;
      line-height: 10px;
    }

    strong{
      vertical-align: middle;
      font-size: 13px;
    }
  }

  .handle{
    position: absolute;
    right: 0;
    bottom: 20px;
    width: 33%;
    line-height: 25px;
    color: #fff;

    strong{
      display: block;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  &.compact{
    position: static;
    left: auto;
    top:auto;
    right: auto;
    bottom: auto;
    height: auto;
    overflow: hidden;
    padding: 60px 13px 0;

    .photo{
      float: left;
      width: 60px;
      height: 60px;
      margin-right: 15px;
      -webkit-background-size: 60px 60px;
      background-size: 60px 60px;
    }
    .text{
      color: $light;
      padding-top: 11px;
      overflow: hidden;
      text-align:left;
      
      .title {
        font-size: 1.3em;
        font-weight: 500;
        margin-bottom: 5px;
      }
      
      .profile-handle {
        font-size: 0.9em;
        font-weight: 500;
        margin-left: 5px;
      }

      em {
        color: $stable;
        font-size: 12px;
      }

    }
  }
}

.profile-handle {
  color: $energized;
}

.profile-tabs{
  position: absolute;
  top: 0;
  left: 0;
  bottom: $tabs-height;
  right: 0;
  z-index: 1;

    > .tab-nav{
      top: 0 !important;
      position: absolute;
      left: 0;
      right: 0;
      height: $tabs-height;
      background: $ribbon-bg;
      text-transform: uppercase;
      padding: 0;
      color: $secondary-text-action;

      .tab-item{
        font-weight: bold;
        font-size: $tabs-text-font-size;
        padding: ($tabs-height/2 - $tabs-text-font-size/2) 0;
        line-height: $tabs-text-font-size * $line-height-base;
        color: #999;

        &.tab-item-active{
          color: $light;
        }
      }
    }

    .tab-content{
      padding-top: 70px;
      background: #eee;

      .content-button{
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        font-size: 14px;
        min-height: 44px;
        border-width: 1px 0 0;

        .ico{
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
}

.reviews-list{
  .item{
    margin-bottom: 2px;

    > .ico{
      float: left;
      margin-right: 15px;
    }

    .review{
      overflow: hidden;

      .top{
        padding: 3px 0 5px;
        overflow: hidden;
        height: auto;

        .rating{
          font-size: 17px;

          li{
            float: left;

            i{color: #3b9fa1;}
          }
        }

        .time{
          float: right;
        }
      }

      .title{
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 0 0 5px;
      }
      .message{
        margin: 0 0 5px;
        display: block;
        display: -webkit-box;
        overflow: hidden;
        white-space: normal;
        text-overflow: ellipsis;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 3;
      }
      .button-holder{
        overflow: hidden;

        button{
          float: right;
          padding: 0 25px;
          min-height: 26px;
        }
      }
    }
  }
}

.profile-list{
  height: 100%;

  .list{
    margin: 0 20px;
    padding-top: 20px;
  }

  .item{
    background: none;
    padding: 10px 0 15px;
    border: none;

    &.endorsements-row{
      padding-top: 0;
      line-height: 31px;
    }

    &.item-divider{
      padding: 0;
      height: 1px;
      margin-bottom: 15px;
      min-height: 0;
      background: #D2D2D2;
    }
    
    .item-label{
      font-weight: bold;
      color: $gradient-bottom;
    }

    .item-note{
      width: 40%;
      text-align: right;
      color: $content-body-text;
      white-space: normal;
      
      .logo {
        position: relative;

        > div {
          margin-right: 0;
        }
        .badge{
          top: auto;
          bottom: -13px;
          right: 0;
        }
      }
    }
  }
}

.experience-list{
  .center{
    text-align: center;
  }
  .item {
    //background: none;
    padding: 10px 15px 3px;
    border-bottom: 1px solid #ddd;
    color: #666;
    
    .edit-btn {
      float: right;
      top: -10px;
      right: -10px;
    }
    
    .experience-heading {
        font-weight: 500;
        margin-right: 25px;
        display: flexbox;
        padding-bottom: 3px;
        
      .title {
        display: block;
        text-transform: capitalize;
        margin-bottom: 3px;
      }
      
      .company{
          display: inline-block;
        font-size: 0.85em;
        text-transform: uppercase;
        color: $positive;
      }
    }
    

    .description {
      border-top: 1px solid $stable;
      padding-top: 3px;
      
      white-space: normal;
      text-overflow: initial;
      
      display: block;
      margin-bottom: 5px;
      line-height: 1.3em;
    }
    
    .props {
      display: inline-block;
      width: 100%;
      border-top: 1px solid $stable;
      padding-top: 3px;
      
      .location {
        font-weight: 400;
        float: left;
        padding: 3px 0;
      }
      
      .time {
        padding: 3px 0;
        float: right;
        
      i {
        margin-right: 4px;
        vertical-align: text-top;
      }
      }
    }
  }
}

.endorsements-list{
  float: right;
  width: 50%;
  text-align: right;
  white-space: normal;

  li{
    width: 36px;
    padding: 0 0 5px 5px;
    display: inline-block;

    .ico{
      width: 31px;
      height: 31px;

      -webkit-background-size: (8994/6)+px (351)/6+px;
      background-size: (8994/6)+px (351)/6+px;

      &.ico-doubletraileractive{background-position: -239px 0;}
      &.ico-passengeractive{background-position: -(1867/2)+px -0;}
      &.ico-tankvehicleactive{background-position: -(2759/2)+px 0;}
      &.ico-hazardousmaterialsactive{background-position: -(731/2)+px 0;}
      &.ico-tankhazardousactive{background-position: -1317px 0;}
    }
  }
}

// edit screen
.edit-fields-list {
  .item {
    border-width: 0 0 1px;
    input {
      color: $content-body-text;
      ::-webkit-input-placeholder {
        color: #333;
      }
    }
    .holder{
      overflow: hidden;
    }
  }
}

//
//.edit-pane{
//  padding-bottom: 42px;
//}

.edit-profile-types{
  .top{
    overflow: hidden;
    padding-bottom: 5px;

    .input-label{
      display: block;
      float: left;
    }
    button{
      float: right;
      border-width: 1px;
    }
  }

  input{
    background: none;
  }

  .selected-trailers{
    white-space: normal;

    li{
      display: inline-block;
      padding-right: 4px;
      padding-left: 5px;
      border-right:  1px solid #ddd;

      &:first-child{
        padding-left: 0;
      }

      &:last-child{
        border: 0;
        padding-right: 0;
      }
    }
  }
}


.profile-activity{
  .title{
    display: block;
    font-size: 14px;
    line-height: 31px;
    font-weight: bold;
    color: #276b93;
    text-transform: uppercase;
    padding: 0 20px;
  }

  .no-feed-items{
    display: block;
    padding: 10px 20px 20px;
    font-size: 14px;
  }
}

.profile-edit-list{
  .item{
    &.error{
      background: rgba(195, 113, 113, 0.12);;
    }
    .error-message{
      position: absolute;
      top: 5px;
      right: 5px;
      color: rgba(119, 6, 6, 0.5);
      font-weight: bold;
    }
    .email{
      font-size: 11px;
      line-height: 26px;
    }
  }
  .toggle-block{
    border-width: 0 0 1px;
  }
}

@media only screen
and (max-device-height : 568px) {
  .profile-visual{
    //top: 64px;
    height: 84px;

    &.compact{
      padding-top: 54px;
    }

    .photo{
      width: 94px;
      height: 94px;
      -webkit-background-size: 94px 94px;
      background-size: 94px 94px;
      border-width: 1px;
    }

    .contacts-amount{
      padding-bottom: 10px;
      padding-right: 10px;
      strong{
        font-size: 12px;
      }
      
    }
  }

  .input-label{
    font-size: 14px;
  }

  .edit-pane{
    .button.ion-log-out{
      line-height: 31px;
      max-height: 32px;

      &:before{
        font-size: 21px;
        line-height: 32px;
      }
    }
  }

  .profile-tabs{
    bottom: 59px;

    > .tab-nav{
      height: 49px;

      .tab-item{
        font-size: 12px;
        padding: 10px 0;
      }
    }

    .tab-content{
      padding-top: 50px;

      .content-button{
        font-size: 13px;
        min-height: 24px;

        .ico{
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
  }
  
  .content-button .button.button-block {
    border: none;
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

